# georis

./: CMakeLists.txt  README.md  todo.txt
include/: GeFLTKVisualizer.h  GeGlWindow.h  GeInfoWindow.h  GeVisualizer.h  GeosController.h  GeosFunc.h  GeosFuncN.h  GeosLogger.h  GeosUIDGen.h  IFileIO.h  IVisualizer.h  constraints.h  controller.h  core.h  dimline.h  errors.h  fontdata.h  geommath.h  georis.h  iordb.h  iosvgx.h  mooLog.h  objects.h  objinfo.h  objutils.h  param.h  uid.h
include/constraints/: ConstrEqual.h  ConstrL2L.h  (+14 more)
res/: constrAngle.xpm  constrAngle_selected.xpm  constrCoincident.xpm  constrCoincident_selected.xpm  constrCollinear.xpm  constrCollinear_selected.xpm  constrConcentric.xpm  constrConcentric_selected.xpm  constrDim.xpm  constrDim_selected.xpm  constrEqual.xpm  constrEqual_selected.xpm  constrFix.xpm  constrFix_selected.xpm  constrHorizontal.xpm  constrHorizontal_selected.xpm  constrMidpoint.xpm  constrMidpoint_selected.xpm  constrOrtho.xpm  constrOrtho_selected.xpm  constrParallel.xpm  constrParallel_selected.xpm  constrSymmetric.xpm  constrSymmetric_selected.xpm  constrTangent.xpm  constrTangent_selected.xpm  constrVertical.xpm  constrVertical_selected.xpm  drawArc.xpm  drawArc_selected.xpm  drawCircle.xpm  drawCircle_selected.xpm  drawLine.xpm  drawLine_selected.xpm  drawPoint.xpm  drawPoint_selected.xpm  drawRay.xpm  drawRay_selected.xpm  drawRect.xpm  drawRect_selected.xpm  (+4 more)
src/: GeFLTKVisualizer.cpp  GeGlWindow.cpp  GeInfoWindow.cpp  GeVisualizer.cpp  GeosFuncN.cpp  controller.cpp  core.cpp  fontdata.cpp  iordb.cpp  iosvgx.cpp  mooLog.cpp  objutils.cpp  test.cpp  uid.cpp
test/: test2lines.svgx  test5lines.svgx  testPP2LSym.svgx  testPP2LSym2.svgx  testPP2LSymV.svgx  testPP2LSymV2.svgx  testPP2LSymVHWDim.svgx
(+52 files in other folders)
